Fix action description being permanently overflowed
Fixes #1592

--- a/less/apps.less
+++ b/less/apps.less
@@ -2039,6 +2039,12 @@
       .form-header {
         flex: 0;
       }
+
+      // Details tab
+      &.details.active {
+        display: flex;
+        flex-direction: column;
+      }
     }
   }
 
